--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        @import "stylesheet.css";
+    </style>
     <body>
-        <h1>Header test</h1>
+        <div class="test">
+        <h1>Is it only the css</h1>
+        </div>
     </body>
 </html>
