Add index.html and Add stylesheet.css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         @import "stylesheet.css";
     </style>
     <body>
-        <div class="test">
-        <h1>Is it only the css</h1>
+        <div class="main">
+            <div class="search">
+                <input class="search" id="search" placeholder="Placeholder">
+            </div>
         </div>
     </body>
 </html>
