Add index.html and stylesheet.css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
     <style>
         @import "stylesheet.css";
     </style>
+    <head>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+    </head>
+    <header>
+        <div class="left">
+            <a class="left-header" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+            <a class="left-header" href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+
+        </div>
+        <div class="right">
+
+        </div>
+    </header>
     <body>
         <div class="main">
+            <div class="top">
+                <div class="img-spacer">
+
+                </div>
+                <img class="img" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+            </div>
+            <div class=form>
             <div class="search">
-                <input class="search" id="search" placeholder="Placeholder">
+                <span class="material-icons" id="search-icon">
+                    search
+                </span>
+                <input class="search" id="search">
+            </div>
             </div>
         </div>
     </body>
