Add index.html and stylesheet.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 
         </div>
         <div class="right">
-
+            <div class="right-text">
+            <a class="right-header" href="https://mail.google.com">Gmail</a>
+            <a class="right-header" href="https://www.google.com/imghp?hl=EN">Images</a>
+            </div>
+            <a class="right-header" href="https://workspace.google.com/">
+                <span class="material-icons" id="apps-icon">
+                apps
+                </span>
+            </a>
+            <a class="right-header" href="https://www.google.com/account/about/">
+                <span class="material-icons" id="account-icon">
+                    account_circle
+                </span>
+            </a>
         </div>
     </header>
     <body>
@@ -33,6 +46,10 @@
                 </span>
                 <input class="search" id="search">
             </div>
+                <div id="buttons">
+                    <button type="button" class="button">Google Search</button>
+                    <button type="button"class="button">I'm Feeling Lucky</button>
+                </div>
             </div>
         </div>
     </body>
