what is happening

--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
             </a>
         </div>
     </header>
+    <footer>
+        <div class="bottom-left">
+            <a class="bottom-left" href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a>
+            <a class="bottom-left" href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a>
+            <a class="bottom-left" href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a>
+        </div>
+        <div id="bottom-middle">
+
+        </div>
+        <div id="bottom-right">
+
+        </div>
+    </footer>
     <body>
         <div class="main">
             <div class="top">
@@ -53,4 +66,17 @@
             </div>
         </div>
     </body>
+    <footer>
+        <div id="bottom-left">
+            <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a>
+            <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a>
+            <a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a>
+        </div>
+        <div id="bottom-middle">
+
+        </div>
+        <div id="bottom-right">
+
+        </div>
+    </footer>
 </html>
