--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
             <a class="bottom-left" href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a>
         </div>
         <div id="bottom-middle">
-
+            <a class="bottom-middle" href="https://sustainability.google/commitments/?utm_source=googlehpfooter&utm_medium=housepromos&utm_campaign=bottom-footer&utm_content=">Carbon neutral since 2007</a>
         </div>
         <div id="bottom-right">
-
+            <a class="bottom-right" href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a>
+            <a class="bottom-right" href="https://policies.google.com/terms?hl=en&fg=1">Terms</a>
+            <a class="bottom-right" href="">Settings</a>
         </div>
     </footer>
     <body>
@@ -66,17 +68,4 @@
             </div>
         </div>
     </body>
-    <footer>
-        <div id="bottom-left">
-            <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a>
-            <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a>
-            <a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a>
-        </div>
-        <div id="bottom-middle">
-
-        </div>
-        <div id="bottom-right">
-
-        </div>
-    </footer>
 </html>
